# AI-Statistical-Advisor

./: .gitignore  README.md  main.py  pyproject.toml  requirements_ollama.txt
docs/: scipy_stats_docs.md
langgraph_agent/: graph.py  graph2.py  nodes.py  nodes2.py
rag/: embedder.py  retriever.py
rag/chroma_db/: chroma.sqlite3
