[project]
name = "stat-test-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.16",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langchain>=0.3.27",
    "langgraph>=0.6.4",
    "openai>=1.99.3",
    "streamlit>=1.48.0",
    "tiktoken>=0.10.0",
]
